// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MostReadItemWrapper should render ltr correctly with 10 items 1`] = `
.emotion-0 {
  position: relative;
  padding-bottom: 1.5rem;
}

@media (max-width: 14.9375rem) {
  .emotion-0 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-0 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-0 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-0 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width: 80rem) {
  .emotion-0 {
    width: calc(20%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display: grid) {
  .emotion-0 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(3, 1fr);
      grid-column-end: span 3;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(4, 1fr);
      grid-column-end: span 4;
    }
  }

  @media (min-width: 80rem) {
    .emotion-0 {
      grid-template-columns: repeat(4, 1fr);
      grid-column-end: span 4;
    }
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

@media (max-width: 14.9375rem) {
  .emotion-3 {
    min-width: 2.5rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-3 {
    min-width: 2.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-3 {
    min-width: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-3 {
    min-width: 4rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-3 {
    min-width: 2rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-3 {
      min-width: 2rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-3 {
    min-width: 2rem;
  }
}

.emotion-4 {
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  position: relative;
  color: #B80000;
  margin: 0;
  padding: 0;
  font-size: 2rem;
  line-height: 2.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-4 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

.emotion-5 {
  padding-top: 0.375rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-5 {
    padding-right: 0;
  }
}

.emotion-6 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-6:hover,
.emotion-6:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

@media (min-width: 25rem) {
  .emotion-6 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }

  @media (min-width: 20rem) and (max-width: 37.4375rem) {
    .emotion-6 {
      font-size: 1.125rem;
      line-height: 1.375rem;
    }
  }

  @media (min-width: 37.5rem) {
    .emotion-6 {
      font-size: 1.25rem;
      line-height: 1.5rem;
    }
  }
}

@media (max-width: 14.9375rem) {
  .emotion-10 {
    min-width: 2.5rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-10 {
    min-width: 2.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-10 {
    min-width: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    min-width: 4rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    min-width: 4rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-10 {
      min-width: 2rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-10 {
    min-width: 2rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-31 {
    min-width: 2.5rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-31 {
    min-width: 2.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-31 {
    min-width: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-31 {
    min-width: 4rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-31 {
    min-width: 2rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-31 {
      min-width: 2rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-31 {
    min-width: 4rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-38 {
    min-width: 2.5rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-38 {
    min-width: 2.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-38 {
    min-width: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-38 {
    min-width: 4rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-38 {
    min-width: 4rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-38 {
      min-width: 4rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-38 {
    min-width: 2rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-45 {
    min-width: 2.5rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-45 {
    min-width: 2.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-45 {
    min-width: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-45 {
    min-width: 4rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-45 {
    min-width: 2rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-45 {
      min-width: 4rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-45 {
    min-width: 2rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-66 {
    min-width: 2.5rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-66 {
    min-width: 2.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-66 {
    min-width: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-66 {
    min-width: 4rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-66 {
    min-width: 4rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-66 {
      min-width: 4rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-66 {
    min-width: 4rem;
  }
}

<div>
  <li
    class="emotion-0 emotion-1"
    dir="ltr"
    role="listitem"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
        dir="ltr"
      >
        <span
          class="emotion-4"
        >
          1
        </span>
      </div>
      <div
        class="emotion-5"
        dir="ltr"
      >
        <a
          class="emotion-6"
          href="https://www.bbc.com/pidgin/articles/cwl08rd38l6o"
        >
          Tins you need to know about Babcock University
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1"
    dir="ltr"
    role="listitem"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-10"
        dir="ltr"
      >
        <span
          class="emotion-4"
        >
          2
        </span>
      </div>
      <div
        class="emotion-5"
        dir="ltr"
      >
        <a
          class="emotion-6"
          href="https://www.bbc.com/pidgin/articles/cwl08rd38l6o"
        >
          Tins you need to know about Babcock University
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1"
    dir="ltr"
    role="listitem"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
        dir="ltr"
      >
        <span
          class="emotion-4"
        >
          3
        </span>
      </div>
      <div
        class="emotion-5"
        dir="ltr"
      >
        <a
          class="emotion-6"
          href="https://www.bbc.com/pidgin/articles/cwl08rd38l6o"
        >
          Tins you need to know about Babcock University
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1"
    dir="ltr"
    role="listitem"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-10"
        dir="ltr"
      >
        <span
          class="emotion-4"
        >
          4
        </span>
      </div>
      <div
        class="emotion-5"
        dir="ltr"
      >
        <a
          class="emotion-6"
          href="https://www.bbc.com/pidgin/articles/cwl08rd38l6o"
        >
          Tins you need to know about Babcock University
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1"
    dir="ltr"
    role="listitem"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-31"
        dir="ltr"
      >
        <span
          class="emotion-4"
        >
          5
        </span>
      </div>
      <div
        class="emotion-5"
        dir="ltr"
      >
        <a
          class="emotion-6"
          href="https://www.bbc.com/pidgin/articles/cwl08rd38l6o"
        >
          Tins you need to know about Babcock University
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1"
    dir="ltr"
    role="listitem"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-38"
        dir="ltr"
      >
        <span
          class="emotion-4"
        >
          6
        </span>
      </div>
      <div
        class="emotion-5"
        dir="ltr"
      >
        <a
          class="emotion-6"
          href="https://www.bbc.com/pidgin/articles/cwl08rd38l6o"
        >
          Tins you need to know about Babcock University
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1"
    dir="ltr"
    role="listitem"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-45"
        dir="ltr"
      >
        <span
          class="emotion-4"
        >
          7
        </span>
      </div>
      <div
        class="emotion-5"
        dir="ltr"
      >
        <a
          class="emotion-6"
          href="https://www.bbc.com/pidgin/articles/cwl08rd38l6o"
        >
          Tins you need to know about Babcock University
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1"
    dir="ltr"
    role="listitem"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-38"
        dir="ltr"
      >
        <span
          class="emotion-4"
        >
          8
        </span>
      </div>
      <div
        class="emotion-5"
        dir="ltr"
      >
        <a
          class="emotion-6"
          href="https://www.bbc.com/pidgin/articles/cwl08rd38l6o"
        >
          Tins you need to know about Babcock University
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1"
    dir="ltr"
    role="listitem"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-45"
        dir="ltr"
      >
        <span
          class="emotion-4"
        >
          9
        </span>
      </div>
      <div
        class="emotion-5"
        dir="ltr"
      >
        <a
          class="emotion-6"
          href="https://www.bbc.com/pidgin/articles/cwl08rd38l6o"
        >
          Tins you need to know about Babcock University
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1"
    dir="ltr"
    role="listitem"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-66"
        dir="ltr"
      >
        <span
          class="emotion-4"
        >
          10
        </span>
      </div>
      <div
        class="emotion-5"
        dir="ltr"
      >
        <a
          class="emotion-6"
          href="https://www.bbc.com/pidgin/articles/cwl08rd38l6o"
        >
          Tins you need to know about Babcock University
        </a>
      </div>
    </div>
  </li>
</div>
`;

exports[`MostReadItemWrapper should render rtl correctly with 10 items 1`] = `
.emotion-0 {
  position: relative;
  padding-bottom: 1.5rem;
}

@media (max-width: 14.9375rem) {
  .emotion-0 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-0 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-0 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-0 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width: 80rem) {
  .emotion-0 {
    width: calc(20%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display: grid) {
  .emotion-0 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(3, 1fr);
      grid-column-end: span 3;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(4, 1fr);
      grid-column-end: span 4;
    }
  }

  @media (min-width: 80rem) {
    .emotion-0 {
      grid-template-columns: repeat(4, 1fr);
      grid-column-end: span 4;
    }
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

@media (max-width: 14.9375rem) {
  .emotion-3 {
    min-width: 1rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-3 {
    min-width: 1.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-3 {
    min-width: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-3 {
    min-width: 2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-3 {
    min-width: 1.5rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-3 {
      min-width: 1.5rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-3 {
    min-width: 1.5rem;
  }
}

.emotion-4 {
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-style: normal;
  font-weight: 400;
  position: relative;
  color: #B80000;
  margin: 0;
  padding: 0;
  font-size: 2rem;
  line-height: 2.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-4 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

.emotion-5 {
  padding-top: 0.375rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-5 {
    padding-left: 0;
  }
}

.emotion-6 {
  font-size: 0.9375rem;
  line-height: 1.5rem;
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-style: normal;
  font-weight: 700;
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-6 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

.emotion-6:hover,
.emotion-6:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

@media (min-width: 25rem) {
  .emotion-6 {
    font-size: 1.125rem;
    line-height: 1.625rem;
  }

  @media (min-width: 20rem) and (max-width: 37.4375rem) {
    .emotion-6 {
      font-size: 1.125rem;
      line-height: 1.625rem;
    }
  }

  @media (min-width: 37.5rem) {
    .emotion-6 {
      font-size: 1.25rem;
      line-height: 1.75rem;
    }
  }
}

@media (max-width: 14.9375rem) {
  .emotion-10 {
    min-width: 1rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-10 {
    min-width: 1.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-10 {
    min-width: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    min-width: 2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    min-width: 2rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-10 {
      min-width: 1.5rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-10 {
    min-width: 1.5rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-31 {
    min-width: 1rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-31 {
    min-width: 1.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-31 {
    min-width: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-31 {
    min-width: 2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-31 {
    min-width: 1.5rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-31 {
      min-width: 1.5rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-31 {
    min-width: 2rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-38 {
    min-width: 1rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-38 {
    min-width: 1.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-38 {
    min-width: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-38 {
    min-width: 2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-38 {
    min-width: 2rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-38 {
      min-width: 2rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-38 {
    min-width: 1.5rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-45 {
    min-width: 1rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-45 {
    min-width: 1.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-45 {
    min-width: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-45 {
    min-width: 2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-45 {
    min-width: 1.5rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-45 {
      min-width: 2rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-45 {
    min-width: 1.5rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-66 {
    min-width: 1rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-66 {
    min-width: 1.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-66 {
    min-width: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-66 {
    min-width: 2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-66 {
    min-width: 2rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-66 {
      min-width: 2rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-66 {
    min-width: 2rem;
  }
}

<div>
  <li
    class="emotion-0 emotion-1"
    dir="rtl"
    role="listitem"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
        dir="rtl"
      >
        <span
          class="emotion-4"
        >
          ۱
        </span>
      </div>
      <div
        class="emotion-5"
        dir="rtl"
      >
        <a
          class="emotion-6"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1"
    dir="rtl"
    role="listitem"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-10"
        dir="rtl"
      >
        <span
          class="emotion-4"
        >
          ۲
        </span>
      </div>
      <div
        class="emotion-5"
        dir="rtl"
      >
        <a
          class="emotion-6"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1"
    dir="rtl"
    role="listitem"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
        dir="rtl"
      >
        <span
          class="emotion-4"
        >
          ۳
        </span>
      </div>
      <div
        class="emotion-5"
        dir="rtl"
      >
        <a
          class="emotion-6"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1"
    dir="rtl"
    role="listitem"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-10"
        dir="rtl"
      >
        <span
          class="emotion-4"
        >
          ۴
        </span>
      </div>
      <div
        class="emotion-5"
        dir="rtl"
      >
        <a
          class="emotion-6"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1"
    dir="rtl"
    role="listitem"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-31"
        dir="rtl"
      >
        <span
          class="emotion-4"
        >
          ۵
        </span>
      </div>
      <div
        class="emotion-5"
        dir="rtl"
      >
        <a
          class="emotion-6"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1"
    dir="rtl"
    role="listitem"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-38"
        dir="rtl"
      >
        <span
          class="emotion-4"
        >
          ۶
        </span>
      </div>
      <div
        class="emotion-5"
        dir="rtl"
      >
        <a
          class="emotion-6"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1"
    dir="rtl"
    role="listitem"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-45"
        dir="rtl"
      >
        <span
          class="emotion-4"
        >
          ۷
        </span>
      </div>
      <div
        class="emotion-5"
        dir="rtl"
      >
        <a
          class="emotion-6"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1"
    dir="rtl"
    role="listitem"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-38"
        dir="rtl"
      >
        <span
          class="emotion-4"
        >
          ۸
        </span>
      </div>
      <div
        class="emotion-5"
        dir="rtl"
      >
        <a
          class="emotion-6"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1"
    dir="rtl"
    role="listitem"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-45"
        dir="rtl"
      >
        <span
          class="emotion-4"
        >
          ۹
        </span>
      </div>
      <div
        class="emotion-5"
        dir="rtl"
      >
        <a
          class="emotion-6"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1"
    dir="rtl"
    role="listitem"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-66"
        dir="rtl"
      >
        <span
          class="emotion-4"
        >
          ۱۰
        </span>
      </div>
      <div
        class="emotion-5"
        dir="rtl"
      >
        <a
          class="emotion-6"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
</div>
`;

exports[`MostReadLink should render ltr correctly 1`] = `
.emotion-0 {
  padding-top: 0.375rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-0 {
    padding-right: 0;
  }
}

.emotion-1 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-1:hover,
.emotion-1:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

@media (min-width: 25rem) {
  .emotion-1 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }

  @media (min-width: 20rem) and (max-width: 37.4375rem) {
    .emotion-1 {
      font-size: 1.125rem;
      line-height: 1.375rem;
    }
  }

  @media (min-width: 37.5rem) {
    .emotion-1 {
      font-size: 1.25rem;
      line-height: 1.5rem;
    }
  }
}

<div>
  <div
    class="emotion-0"
    dir="ltr"
  >
    <a
      class="emotion-1"
      href="https://www.bbc.com/pidgin/articles/cwl08rd38l6o"
    >
      Tins you need to know about Babcock University
    </a>
  </div>
</div>
`;

exports[`MostReadLink should render rtl correctly 1`] = `
.emotion-0 {
  padding-top: 0.375rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-0 {
    padding-left: 0;
  }
}

.emotion-1 {
  font-size: 0.9375rem;
  line-height: 1.5rem;
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-style: normal;
  font-weight: 700;
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

.emotion-1:hover,
.emotion-1:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

@media (min-width: 25rem) {
  .emotion-1 {
    font-size: 1.125rem;
    line-height: 1.625rem;
  }

  @media (min-width: 20rem) and (max-width: 37.4375rem) {
    .emotion-1 {
      font-size: 1.125rem;
      line-height: 1.625rem;
    }
  }

  @media (min-width: 37.5rem) {
    .emotion-1 {
      font-size: 1.25rem;
      line-height: 1.75rem;
    }
  }
}

<div>
  <div
    class="emotion-0"
    dir="rtl"
  >
    <a
      class="emotion-1"
      href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
    >
      در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
    </a>
  </div>
</div>
`;

exports[`MostReadLink should render with last updated date correctly 1`] = `
.emotion-0 {
  padding-top: 0.375rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-0 {
    padding-right: 0;
  }
}

.emotion-1 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-1:hover,
.emotion-1:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

@media (min-width: 25rem) {
  .emotion-1 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }

  @media (min-width: 20rem) and (max-width: 37.4375rem) {
    .emotion-1 {
      font-size: 1.125rem;
      line-height: 1.375rem;
    }
  }

  @media (min-width: 37.5rem) {
    .emotion-1 {
      font-size: 1.25rem;
      line-height: 1.5rem;
    }
  }
}

.emotion-2 {
  padding-top: 0.5rem;
}

.emotion-3 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #545658;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-3 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-3 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

<div>
  <div
    class="emotion-0"
    dir="ltr"
  >
    <a
      class="emotion-1"
      href="https://www.bbc.com/pidgin/articles/cwl08rd38l6o"
    >
      Tins you need to know about Babcock University
    </a>
    <div
      class="emotion-2"
    >
      <time
        class="emotion-3 emotion-4"
        datetime="2019-03-01T14:00+00:00"
      >
        Last updated: 5th November 2016
      </time>
    </div>
  </div>
</div>
`;
